--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title></title>
     </head>
     <body>
+
+        <h2 id="player1"></h2>
+        <h2 id="player2"></h2>
+
+        <h1 id="winner"></h1>
         <script src="main.js" charset="utf-8"></script>
 
     </body>
